# layout-converter

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  RAILWAY_DEPLOYMENT.md  README.md  build.sh  railway.json  test_advanced  test_key_system  test_key_system.cpp  test_key_system_advanced.cpp
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/: key_system.h  layout_converter.h  layout_library.h
core/src/: key_system.cpp  layout_engine.cpp  simple_layout_loader.cpp
data/layouts/: qwerty.json  qwerty_keyid.json  russian.json  russian_keyid.json  workman.json
scripts/: extract_layouts.py
telegram_bot/: health_check.py  layout_converter_bot.py  requirements.txt
tests/: CMakeLists.txt  test_layout_converter.cpp
